--- a/baton/static/baton/app/src/styles/_placeholders.scss
+++ b/baton/static/baton/app/src/styles/_placeholders.scss
@@ -365,6 +365,7 @@
       margin-left: auto;
       margin-right: auto;
       order: 2;
+      text-align: center;
 
       @include media-breakpoint-up(md) {
         margin-left: 0;
